将JDK版本由11降级至1.8,完成对Paper1.12.2的兼容